--- a/index.html
+++ b/index.html
@@ -63,11 +63,20 @@
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Demonstration </h1>
-      <h5 class="w3-padding-32">The Monty Hall problem is a brain teaser, in the form of a probability puzzle, loosely based on the American television game show Let's Make a Deal and named after its original host, Monty Hall. The problem was originally posed (and solved) in a letter by Steve Selvin to the American Statistician in 1975. It became famous as a question from reader Craig F. Whitaker's letter quoted in Marilyn vos Savant's "Ask Marilyn" column in Parade magazine in 1990:
-        <blockquote>Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. He then says to you, "Do you want to pick door No. 2?" Is it to your advantage to switch your choice?
-        </blockquote>
+      <h1 id="demonstrate">Demonstration </h1>
+      <h5 class="w3-padding-16">To show which method, switch or keep door, is more successful, we rely on statistics.   
       </h5>
+      <p>
+          The game runs an input number of times, playing both as a <i>swapper</i> and as a <i>keeper</i> preferably more than a 100 times so we get a solid ground for chance to play out right. Then we get the stats on which method was most successful in percentages. 
+        </p>
+          <label for="playcount">Input the number of times to run </label>
+          <input type="number" id="playcount" name="playcount">
+          <button id="submit_input">Submit</button>
+        <div class="w3-container w3-center w3-padding-64" style="width: 100%">
+          <p id="stats"></p>
+          <div id="keeper_bar" class="w3-container w3-green">Keeper</div>
+          <div id="swapper_bar" class="w3-container w3-red">Swapper</div>
+        </div>
     </div>
 
     <div class="w3-third w3-center">
@@ -77,7 +86,8 @@
 </div>
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-  <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+  <h1 class="w3-margin w3-xlarge">
+    <p>Information gathered on <a href="https://en.wikipedia.org/wiki/Monty_Hall_problem" target="_blank">Wikipedia</a></p></h1>
 </div>
 
 <!-- Footer -->
@@ -91,6 +101,7 @@
     <i class="fa fa-linkedin w3-hover-opacity"></i>
  </div>
  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+ 
 </footer>
   <script src="https://kit.fontawesome.com/2e59e30a69.js" crossorigin="anonymous"></script>
     <script src="main.js">
