Show stats as bars centered input

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           The game runs an input number of times, playing both as a <i>swapper</i> and as a <i>keeper</i> preferably more than a 100 times so we get a solid ground for chance to play out right. Then we get the stats on which method was most successful in percentages. 
         </p>
           <label for="playcount">Input the number of times to run </label>
-          <input type="number" id="playcount" name="playcount">
+          <input class="w3-center" type="number" id="playcount" name="playcount">
           <button id="submit_input">Submit</button>
         <div class="w3-container w3-center w3-padding-64" style="width: 100%">
           <p id="stats"></p>
