--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Monty Hall problem</title>
-  <link href="styles.css" rel="stylesheet" type="text/css" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -74,8 +73,8 @@
           <button id="submit_input">Submit</button>
         <div class="w3-container w3-center w3-padding-64" style="width: 100%">
           <p id="stats"></p>
-          <div id="keeper_bar" class="w3-container w3-green">Keeper</div>
-          <div id="swapper_bar" class="w3-container w3-red">Swapper</div>
+          <div id="keeper_bar" style="height:60px;" class="w3-container w3-green">Keeper</div>
+          <div id="swapper_bar" style="height:60px;" class="w3-container w3-red">Swapper</div>
         </div>
     </div>
 
