Update demonstration message

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h5 class="w3-padding-16">To show which method, switch or keep door, is more successful, we rely on statistics.   
       </h5>
       <p>
-          The game runs an input number of times, playing both as a <i>swapper</i> and as a <i>keeper</i> preferably more than a 100 times so we get a solid ground for chance to play out right. Then we get the stats on which method was most successful in percentages. 
+          The game runs the specified number of times, playing both as a <i>swapper</i> and as a <i>keeper</i>. You should input a number greater than a hundered preferably, so that you can get a solid evidence of the outcome. The stats on which method was most successful will display in bars representing percentages. 
         </p>
           <label for="playcount">Input the number of times to run </label>
           <input class="w3-center" type="number" id="playcount" name="playcount">
